[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bw-backup"
version = "1.1.0"
authors = [
  { name = "pschlo", email = "70105856+pschlo@users.noreply.github.com" },
]
description = "Back up a Bitwarden vault, including attachments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pywarden @ git+https://github.com/pschlo/pywarden.git@7e47a658653e6f971bc357d1c4ccc2e4efbec183",
]

[project.scripts]
bw-backup = "bw_backup.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.4",
  "ruff>=0.12",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bw_backup"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
